<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingHorizontal="24dp"
    tools:ignore="SpUsage">

    <!-- ===================== TOP BAR ===================== -->

    <!-- Header -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:background="@color/grey_dark"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Drive button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/drive"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:width="100dp"
        android:text="@string/drive"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- User Name -->
    <TextView
        android:id="@+id/name"
        android:layout_width="100dp"
        android:layout_height="58dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/act"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- ===================== HEADERS ===================== -->

    <!-- Header part 1 -->
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_name"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Header part 2 -->
    <TextView
        android:id="@+id/tv_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:layout_marginTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Header part 3 -->
    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- ===================== LIST (SCROLL) ===================== -->

    <!-- User List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/users_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_rules"
        app:layout_constraintBottom_toTopOf="@id/apply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!-- ===================== BOTTOM FIXED BUTTON ===================== -->

    <!-- Apply button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/apply"
        style="@style/ButtonStyle"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:text="@string/apply"
        android:layout_marginBottom="12dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>