<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drive_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingHorizontal="24dp"
    tools:ignore="SpUsage">

    <!-- Header -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:clickable="false"
        android:background="@color/grey_dark"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Admin panel button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/admin_panel"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:width="100dp"
        android:text="@string/admin_panel"
        android:textSize="16dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- You Rules -->
    <TextView
        android:id="@+id/you_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="4dp"
        android:gravity="center"
        android:text="@string/you_rules"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Rules -->
    <TextView
        android:id="@+id/rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_bg"
        android:fontFamily="monospace"
        android:gravity="center"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColor="@color/act"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/you_rules" />

    <!-- User Name -->
    <TextView
        android:id="@+id/name"
        android:layout_width="100dp"
        android:layout_height="58dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/act"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Up Dir -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/up_dir"
        style="@style/ButtonStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:includeFontPadding="false"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="&lt;"
        android:textColor="@color/act"
        android:textSize="30dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/path"
        app:layout_constraintTop_toTopOf="@+id/path" />

    <!-- Path Dir -->
    <TextView
        android:id="@+id/path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/text_bg"
        android:gravity="center"
        android:maxWidth="250dp"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:padding="5dp"
        android:text="/"
        android:fontFamily="monospace"
        android:textColor="@color/act"
        android:textSize="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/drive_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/path">

        <!-- File List -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/files_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create"
        style="@style/ButtonStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:enabled="false"
        android:text="+"
        android:textSize="50dp"
        android:textColor="@color/white_dark"
        android:fontFamily="monospace"
        android:gravity="center"
        android:includeFontPadding="false"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- File preview -->
    <FrameLayout
        android:id="@+id/preview_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:background="@color/file_preview_bg"
        android:clickable="true"
        android:focusable="true"
        android:translationZ="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <!-- Name -->
            <TextView
                android:id="@+id/preview_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="28dp"
                android:textStyle="bold"/>

            <!-- Icon -->
            <ImageView
                android:id="@+id/preview_icon"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="16dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="24dp">

                <!-- Path -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/file_preview_path"
                        android:textColor="@color/white"
                        android:textSize="18dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/preview_path"
                        android:gravity="center"
                        android:background="@drawable/text_bg"
                        android:textColor="@color/act"
                        android:padding="5dp"
                        android:textSize="18dp"/>
                </LinearLayout>

                <!-- Size -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/file_preview_size"
                        android:textColor="@color/white"
                        android:textSize="18dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/preview_size"
                        android:background="@drawable/text_bg"
                        android:textColor="@color/act"
                        android:padding="5dp"
                        android:textSize="18dp"/>
                </LinearLayout>

                <!-- Date -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/file_preview_date"
                        android:textColor="@color/white"
                        android:textSize="18dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/preview_date"
                        android:background="@drawable/text_bg"
                        android:textColor="@color/act"
                        android:padding="5dp"
                        android:textSize="18dp"/>
                </LinearLayout>
            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/preview_download"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="58dp"
                    android:text="@string/download"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/preview_delete"
                    style="@style/RedButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="58dp"
                    android:enabled="false"
                    android:textColor="@color/white_dark"
                    android:layout_marginStart="12dp"
                    android:text="@string/delete"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>